# ai-platform

./: .gitignore  .gitmodules  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/ml-service/: pyproject.toml
apps/ml-service/src/: __init__.py  main.py
apps/web/: package.json
docs/: ARCHITECTURE.md  DOCS_INDEX.md  LIVING_DOCS_POLICY.md  ROADMAP.md
plugins/thought-graph/: package.json
plugins/thought-graph/src/: index.ts
